--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "postbuild": "npx pagefind --site .next/server/app --output-path public/pagefind",
+    "postbuild": "npx pagefind --site out --output-path out/pagefind && cp -r out/pagefind public/pagefind",
     "start": "next start",
     "lint": "next lint"
   },
