--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-config-next": "^14.0.4",
     "next": "^14.0.4",
     "next-contentlayer2": "^0.5.8",
+    "next-themes": "^0.4.6",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
